first changes to indian touch

--- a/pages/index.html.haml
+++ b/pages/index.html.haml
@@ -1,6 +1,6 @@
 %p#mission-statement
-  The founding purpose of Ruby Australia is to further the use and adoption of
-  the Ruby programming language in Australia, and to support and encourage a
+  The founding purpose of Ruby India is to further the use and adoption of
+  the Ruby programming language and its frameworks in Indian subcontinent, and to support and encourage a
   vibrant community around the language and related technologies.
 
 %section#meetups
@@ -12,31 +12,31 @@
 
   %ul.meetup-locations
     %li
-      %a#adl{href: '/meetups/adl.html'} Adelaide
+      %a#adl{href: '/meetups/adl.html'} Bangalore
     %li
-      %a#bne{href: '/meetups/bne.html'} Brisbane
+      %a#bne{href: '/meetups/bne.html'} Pune
     %li
-      %a#can{href: '/meetups/can.html'} Canberra
+      %a#can{href: '/meetups/can.html'} Delhi NCR
     %li
-      %a#mel{href: '/meetups/mel.html'} Melbourne
+      %a#mel{href: '/meetups/mel.html'} Hyderabad
     %li
-      %a#per{href: '/meetups/per.html'} Perth
+      %a#per{href: '/meetups/per.html'} Chennai
     %li
-      %a#syd{href: '/meetups/syd.html'} Sydney
+      %a#syd{href: '/meetups/syd.html'} Kochi
 
 %section#railscamp
   %h3 Rails Camp
   %p
-    Ruby Australia is the organising body of Australian Rails Camp events.
-    Please see the official <a href="http://railscamps.com">Rails Camp</a> site
+    Ruby India is the organising body of Indian Rails Camp events.
+    Please see the official <a href="http://railscamp.rubyin.org">Rails Camp India</a> site
     for more details.
 
 %section
-  %h3 Join Ruby Australia
+  %h3 Join Ruby India
   %p
-    Joining Ruby Australia is free. <a href="/join-ruby-australia.html">Join!</a>
+    Joining Ruby India is free. <a href="/join-ruby-australia.html">Join!</a>
 
   %h3 Contributing to the site
   %p
     The site's source is hosted on Github:
-    <a href="https://github.com/rails-oceania/ruby.org.au">https://github.com/rails-oceania/ruby.org.au</a>.  Please refer to the <a href="https://github.com/rails-oceania/ruby.org.au#readme">README</a> there for more details.
+    <a href="https://github.com/chetanmittal/rubyin.org">https://github.com/chetanmittal/rubyin.org</a>.  Please refer to the <a href="https://github.com/chetanmittal/rubyin.org#readme">README</a> there for more details.
