--- a/layout.html.haml
+++ b/layout.html.haml
@@ -4,8 +4,8 @@
     %meta{charset: 'utf-8'}
     %meta{"http-equiv" => "X-UA-Compatible", content: "IE=edge,chrome=1"}
     %title Ruby Australia
-    %meta{name: 'description', content: 'Ruby Australia'}
-    %meta{name: 'keywords', content: 'ruby, rails, australia, melbourne, sydney, canberra, perth, central coast, brisbane, perth, western australia, sa, south australia, victoria, new south wales, nsw, vic, qld, queensland, wa, can, programming, meetup, group, user group, conferences, events'}
+    %meta{name: 'description', content: 'Ruby India'}
+    %meta{name: 'keywords', content: 'ruby, rails, india, bangalore, hyderabad, pune, mumbai, chennai, delhi, ahmedabad, kochi, mangalore, jaipur, lucknow, kolkata, karnataka, andhra, tamil, punjab, rajasthan, delhi, kerela, maharashtra, gujarat, can, programming, meetup, group, user group, conferences, events'}
     %meta{name: 'viewport', content: 'width=device-width'}
 
     %link{rel: 'stylesheet', href: '/css/screen.css'}
@@ -13,7 +13,7 @@
   %body
     %header{role: 'banner'}
       %a{href: '/'}
-        %span.logo Ruby Australia
+        %span.logo Ruby India
     %aside#meta
       %nav{role: 'navigation'}
         %ul
@@ -25,10 +25,10 @@
             %a{href: 'https://github.com/rails-oceania/roro/wiki/Mentoring'} Mentoring
 
       %p
-        Twitter: <a href="http://twitter.com/rubyaustralia">@rubyaustralia</a>
+        Twitter: <a href="http://twitter.com/rubyindia">@rubyindia</a>
 
     %section{role: 'main'}
       = yield
 
     %footer{role: 'contentinfo'}
-      %small &copy; 2012 Ruby Australia
+      %small &copy; 2012 Ruby India
