--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -58,6 +58,7 @@ nav {
 
 [role='main'] {
   @include right-column;
+  margin-top: -160px; 
   @include respond-to(tablet) { float: none; margin: 0 17px; width: 90%; }
   
   & section { margin-bottom: 5em; }
