change to ruby india

--- a/layout.html.haml
+++ b/layout.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{charset: 'utf-8'}
     %meta{"http-equiv" => "X-UA-Compatible", content: "IE=edge,chrome=1"}
-    %title Ruby Australia
+    %title Ruby India 
     %meta{name: 'description', content: 'Ruby India'}
     %meta{name: 'keywords', content: 'ruby, rails, india, bangalore, hyderabad, pune, mumbai, chennai, delhi, ahmedabad, kochi, mangalore, jaipur, lucknow, kolkata, karnataka, andhra, tamil, punjab, rajasthan, delhi, kerela, maharashtra, gujarat, can, programming, meetup, group, user group, conferences, events'}
     %meta{name: 'viewport', content: 'width=device-width'}
