--- a/site/css/screen.css
+++ b/site/css/screen.css
@@ -386,7 +386,7 @@ header[role='banner'] .logo {
   text-indent: 110%;
   white-space: nowrap;
   overflow: hidden;
-  background-image: url('/images/ruby-australia-logo.png?1337691278');
+  background-image: url('/images/rubyin-logo.png?1337849123');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   width: 124px;
