--- a/site/css/screen.css
+++ b/site/css/screen.css
@@ -386,7 +386,7 @@ header[role='banner'] .logo {
   text-indent: 110%;
   white-space: nowrap;
   overflow: hidden;
-  background-image: url('/images/rubyin-logo.png?1337849123');
+  background-image: url('/images/rubyin-logo.png?1339005325');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   width: 124px;
@@ -427,6 +427,7 @@ nav * {
   overflow: hidden;
   *zoom: 1;
   margin-top: -160px;
+  text-align: justify;
 }
 @media screen and (max-width: 1000px) {
   /* line 59, ../../stylesheets/screen.scss */
@@ -436,23 +437,23 @@ nav * {
     width: 90%;
   }
 }
-/* line 64, ../../stylesheets/screen.scss */
+/* line 65, ../../stylesheets/screen.scss */
 [role='main'] section {
   margin-bottom: 5em;
 }
 
-/* line 67, ../../stylesheets/screen.scss */
+/* line 68, ../../stylesheets/screen.scss */
 .meetup-locations {
   margin: 0;
   padding: 0;
 }
-/* line 70, ../../stylesheets/screen.scss */
+/* line 71, ../../stylesheets/screen.scss */
 .meetup-locations li {
   display: block;
 }
 
 /* Index page */
-/* line 75, ../../stylesheets/screen.scss */
+/* line 76, ../../stylesheets/screen.scss */
 #mission-statement {
   font-size: 150%;
   font-weight: bold;
@@ -460,7 +461,7 @@ nav * {
   margin-bottom: 2em;
 }
 @media screen and (max-width: 760px) {
-  /* line 75, ../../stylesheets/screen.scss */
+  /* line 76, ../../stylesheets/screen.scss */
   #mission-statement {
     font-weight: normal;
     font-size: 1.1em;
@@ -468,17 +469,17 @@ nav * {
 }
 
 /* Committee members page */
-/* line 84, ../../stylesheets/screen.scss */
+/* line 85, ../../stylesheets/screen.scss */
 #members article {
   border-bottom: 1px solid #999;
   padding-bottom: 1.5em;
   margin-bottom: 3em;
 }
-/* line 86, ../../stylesheets/screen.scss */
+/* line 87, ../../stylesheets/screen.scss */
 #members article:last-child {
   border: 0;
 }
-/* line 91, ../../stylesheets/screen.scss */
+/* line 92, ../../stylesheets/screen.scss */
 #members article img {
   float: right;
   width: 150px;
@@ -488,39 +489,39 @@ nav * {
   -o-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 96, ../../stylesheets/screen.scss */
+/* line 97, ../../stylesheets/screen.scss */
 #members article header, #members article div {
   margin-right: 160px;
 }
-/* line 99, ../../stylesheets/screen.scss */
+/* line 100, ../../stylesheets/screen.scss */
 #members article h3, #members article p {
   margin-top: 0;
 }
-/* line 101, ../../stylesheets/screen.scss */
+/* line 102, ../../stylesheets/screen.scss */
 #members article .position {
   font-size: 0.9em;
   font-style: italic;
   color: #777;
 }
-/* line 103, ../../stylesheets/screen.scss */
+/* line 104, ../../stylesheets/screen.scss */
 #members article h3 {
   font-size: 1.25em;
   margin-bottom: 0.2em;
 }
 
-/* line 110, ../../stylesheets/screen.scss */
+/* line 111, ../../stylesheets/screen.scss */
 form {
   margin: 0;
   padding: 0;
 }
 
-/* line 115, ../../stylesheets/screen.scss */
+/* line 116, ../../stylesheets/screen.scss */
 fieldset {
   border: none;
   padding: 0 0 1.5em 0;
 }
 
-/* line 120, ../../stylesheets/screen.scss */
+/* line 121, ../../stylesheets/screen.scss */
 label {
   display: inline-block;
   float: left;
@@ -529,20 +530,20 @@ label {
   margin-right: 10px;
 }
 
-/* line 128, ../../stylesheets/screen.scss */
+/* line 129, ../../stylesheets/screen.scss */
 input {
   margin-bottom: 0.5em;
   width: 300px;
 }
 
-/* line 134, ../../stylesheets/screen.scss */
+/* line 135, ../../stylesheets/screen.scss */
 footer[role="contentinfo"] {
   overflow: hidden;
   *zoom: 1;
   clear: both;
   padding: 2em 0;
 }
-/* line 140, ../../stylesheets/screen.scss */
+/* line 141, ../../stylesheets/screen.scss */
 footer[role="contentinfo"] small {
   width: 920px;
   margin-left: 10px;
