--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -58,7 +58,8 @@ nav {
 
 [role='main'] {
   @include right-column;
-  margin-top: -160px; 
+  margin-top: -160px;
+  text-align: justify; 
   @include respond-to(tablet) { float: none; margin: 0 17px; width: 90%; }
   
   & section { margin-bottom: 5em; }
