--- a/layout.html.haml
+++ b/layout.html.haml
@@ -25,7 +25,7 @@
             %a{href: 'https://github.com/rails-oceania/roro/wiki/Mentoring'} Mentoring
 
       %p
-        Twitter: <a href="http://twitter.com/rubyindia">@rubyindia</a>
+        Twitter: <a href="http://twitter.com/rubyindia">@rubyinorg</a>
 
     %section{role: 'main'}
       = yield
