updated committee members page 1

--- a/pages/committee-members.html.haml
+++ b/pages/committee-members.html.haml
@@ -3,32 +3,32 @@
     %h1 Committee Members
 
   %article
-    %img{src: '/images/committee-members/keith-avatar.jpg'}
+    %img{src: '/images/committee-members/avatar.jpg'}
     %header
-      %h3 Keith Pitty
+      %h3 Position Open
       %p.position President
     %div.bio
-      %p Keith is a regular organiser of and presenter at Sydney Ruby meetups, led the organisation of Railscamp 9 at Lake Ainsworth and has committed to ensuring that the inaugural Australian Ruby Conference becomes a reality. He runs <a href="http://www.cockatoosoftware.com.au">Cockatoo Software</a>.
-      %p Away from computers, he loves sport, especially cricket, golf and Aussie Rules. Oh, and single malt whisky.
+      %p The role of President is to lead the Ruby India organization so that it achieves its goals fulfilling its sole purpose. Main responsibilities will be to manage A-Z of the organization.
+      %p There might be some travelling required.
     %div.contact
-      %a{href: 'http://twitter.com/keithpitty'} @keithpitty
-      %a{href: 'http://au.linkedin.com/in/keithpitty'} LinkedIn
-      %a{href: 'https://github.com/keithpitty'} Github
+      %a{href: 'http://twitter.com/rubyindia'} @rubyindia
+      %a{href: 'http://au.linkedin.com/in/rubyindia'} LinkedIn
+      %a{href: 'https://github.com/rubyindia'} Github
   
   %article
-    %img{src: '/images/committee-members/nigel-avatar.jpg'}
+    %img{src: '/images/committee-members/avatar.jpg'}
     %header
-      %h3 Nigel Rausch
+      %h3 Position Open
       %p.position Vice-President
     %div.bio
-      %p Nigel has a strong community spirit and is heavily involved organising Brisbane’s Ruby, Javascript and WorkAtJelly meetups as well as mentoring friends and ex-colleagues in their business ventures.
-      %p He is proud to be part of the Ruby Australia Association and is excited how it will make Ruby more visible to the wider community and to the Enterprise.
+      %p The role of Vice-President will be to work jointly with President towards achieving organizations' goals and its purpose. Main responsibilities will be to manage A-Z of the organization as second in command.
+      %p There might be some travelling required.
     %div.contact
-      %a{href: 'http://twitter.com/NR99'} @NR99
-      %a{href: 'http://www.linkedin.com/in/nigelrausch'} Linkedin
+      %a{href: 'http://twitter.com/rubyindia'} @rubyindia
+      %a{href: 'http://www.linkedin.com/in/rubyindia'} Linkedin
   
   %article
-    %img{src: '/images/committee-members/richie-avatar.jpg'}
+    %img{src: '/images/committee-members/avatar.jpg'}
     %header
       %h3 Richie Khoo
       %p.position Secretary
