file and folder renamed

--- a/pages/index.html.haml
+++ b/pages/index.html.haml
@@ -10,17 +10,17 @@
 
   %ul.meetup-locations
     %li
-      %a#adl{href: '/meetups/adl.html'} Bangalore
+      %a#bng{href: '/meetups/bng.html'} Bangalore
     %li
-      %a#bne{href: '/meetups/bne.html'} Pune
+      %a#pun{href: '/meetups/pun.html'} Pune
     %li
-      %a#can{href: '/meetups/can.html'} Delhi NCR
+      %a#del{href: '/meetups/del.html'} Delhi NCR
     %li
-      %a#mel{href: '/meetups/mel.html'} Hyderabad
+      %a#hyd{href: '/meetups/hyd.html'} Hyderabad
     %li
-      %a#per{href: '/meetups/per.html'} Chennai
+      %a#chn{href: '/meetups/chn.html'} Chennai
     %li
-      %a#syd{href: '/meetups/syd.html'} Kochi
+      %a#koc{href: '/meetups/koc.html'} Kochi
 
 %section#railscamp
   %h3 Rails Camp
@@ -32,9 +32,9 @@
 %section
   %h3 Join Ruby India
   %p
-    Joining Ruby India is free. <a href="/join-ruby-australia.html">Join!</a>
+    Joining Ruby India is free. <a href="/join-ruby-india.html">Join!</a>
 
   %h3 Contributing to the site
   %p
     The site's source is hosted on Github:
-    <a href="https://github.com/chetanmittal/rubyin.org">https://github.com/chetanmittal/rubyin.org</a>.  Please refer to the <a href="https://github.com/chetanmittal/rubyin.org#readme">README</a> there for more details.
+    <a href="https://github.com/rubyin/rubyin.org">https://github.com/rubyin/rubyin.org</a>.  Please refer to the <a href="https://github.com/rubyin/rubyin.org#readme">README</a> there for more details.
