towards bringing site to ruby india

--- a/layout.html.haml
+++ b/layout.html.haml
@@ -21,11 +21,11 @@
             %a{href: '/committee-members.html'} Committee Members
             %a{href: '/#meetups'} Meetups
             %a{href: '/#railscamp'} Railscamp
-            %a{href: 'https://github.com/rails-oceania/roro/wiki'} Wiki
-            %a{href: 'https://github.com/rails-oceania/roro/wiki/Mentoring'} Mentoring
+            %a{href: 'https://github.com/rubyindia/wiki'} Wiki
+            %a{href: 'https://github.com/rubyindia/wiki/Mentoring'} Mentoring
 
       %p
-        Twitter: <a href="http://twitter.com/rubyindia">@rubyinorg</a>
+        Twitter: <a href="http://twitter.com/rubyinorg">@rubyinorg</a>
 
     %section{role: 'main'}
       = yield
