--- a/pages/committee-members.html.haml
+++ b/pages/committee-members.html.haml
@@ -11,7 +11,7 @@
       %p The role of President is to lead the Ruby India organization so that it achieves its goals fulfilling its sole purpose. Main responsibilities will be to manage A-Z of the organization.
       %p There might be some travelling required.
     %div.contact
-      %a{href: 'http://twitter.com/rubyindia'} @rubyindia
+      %a{href: 'http://twitter.com/rubyinorg'} @rubyinorg
       %a{href: 'http://in.linkedin.com/in/rubyindia'} LinkedIn
       %a{href: 'https://github.com/rubyindia'} Github
   
@@ -24,7 +24,7 @@
       %p The role of Vice-President will be to work jointly with President towards achieving organizations' goals and its purpose. Main responsibilities will be to manage A-Z of the organization as second in command.
       %p There might be some travelling required.
     %div.contact
-      %a{href: 'http://twitter.com/rubyindia'} @rubyindia
+      %a{href: 'http://twitter.com/rubyinorg'} @rubyinorg
       %a{href: 'http://in.linkedin.com/in/rubyindia'} Linkedin
   
   %article
@@ -36,7 +36,7 @@
       %p The role of Secretary is to take care of almost everything related to the functioning of organization. Main responsibilites will be to orgnaize and minute meetings, to maintain records, to uphold legal requirements, and to communicate and corrospond.
       %p There might be some travelling required.
     %div.contact
-      %a{href: 'http://twitter.com/rubyindia'} @rubyindia
+      %a{href: 'http://twitter.com/rubyinorg'} @rubyinorg
       %a{href: 'http://in.linkedin.com/in/rubyindia'} LinkedIn
       %a{href: 'https://github.com/rubyindia'} Github
       %a{href: 'http://zerply.com/rubyindia'} Zerply
@@ -49,6 +49,6 @@
     %div.bio
       %p The role of treasurer is to take care of all the cash flow of organization. Main responsibilities will to manage finance, manage expenses and income of the organization.
     %div.contact
-      %a{href: 'http://twitter.com/rubyindia'} @rubyindia
+      %a{href: 'http://twitter.com/rubyinorg'} @rubyinorg
       %a{href: 'http://au.linkedin.com/in/rubyindia'} LinkedIn
       %a{href: 'https://github.com/rubyindia'} Github
