--- a/pages/index.html.haml
+++ b/pages/index.html.haml
@@ -37,4 +37,4 @@
   %h3 Contributing to the site
   %p
     The site's source is hosted on Github:
-    <a href="https://github.com/rubyin/rubyin.org">https://github.com/rubyin/rubyin.org</a>.  Please refer to the <a href="https://github.com/rubyin/rubyin.org#readme">README</a> there for more details.
+    <a href="https://github.com/rubyindia/rubyin.org">https://github.com/rubyindia/rubyin.org</a>.  Please refer to the <a href="https://github.com/rubyindia/rubyin.org#readme">README</a> there for more details.
