embedded membership form

--- a/pages/join-ruby-india.html.haml
+++ b/pages/join-ruby-india.html.haml
@@ -1,3 +1,4 @@
 %section
   %h3 Join Ruby India
-  %iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dGZGSTdTbnV2WWZ0ZUo2ZVNzSTE2WlE6MQ" width="760" height="933" frameborder="0" marginheight="0" marginwidth="0">Loading...
+  %iframe{:src=>"https://docs.google.com/spreadsheet/embeddedform?formkey=dGZGSTdTbnV2WWZ0ZUo2ZVNzSTE2WlE6MQ", :width=>760, :height=>970, :frameborder=>"0", :marginheight=>"0", :marginwidth=>"0"}
+    Loading... 
