major changes towards completion

--- a/pages/meetups/bng.html.haml
+++ b/pages/meetups/bng.html.haml
@@ -1,5 +1,5 @@
 %section
-  %h3 Adelaide Ruby
+  %h3 Bangalore Ruby
 
   %article
     %h4 Next Meetup
@@ -10,8 +10,8 @@
 
   %article
     %h4 Organisers
-    %p Daniel Draper (<a href="http://twitter.com/danieldraper">@danieldraper</a>) and Michael Noack.
+    %p Sidu Ponappa (<a href="http://twitter.com/siduponappa">@siduponappa</a>) and Hemant (<a href="http://twitter.com/gnufied">@gnufied</a>).
 
   %article
     %h4 Schedule
-    %p To find out more about the Adelaide Ruby group, visit <a href="http://adelaiderb.com">adelaide.rb</a>.
+    %p To find out more about the Bangalore Ruby group, visit <a href="http://bangaloreruby.org">Bangalore Ruby User Group</a>.
