--- a/pages/meetups/del.html.haml
+++ b/pages/meetups/del.html.haml
@@ -1,5 +1,5 @@
 %section
-  %h3 Canberra
+  %h3 Delhi NCR
 
   %article
     %h4 Next Meetup
@@ -10,8 +10,8 @@
 
   %article
     %h4 Organisers
-    %p Max Wheeler (<a href="http://twitter.com/makenosound">@makenosound</a>), Shoaib Burq (<a href="http://twitter.com/sabman">@sabman</a>), Hugh Evans (<a href="http://twitter.com/hughevans">@hughevans</a>), Michael MacDonald (<a href="http://twitter.com/schlick">@schlick</a>) and Jared Fraser (<a href="http://twitter.com/modsognir">@modsognir</a>).
+    %p Whoami (<a href="http://twitter.com/whoami">@whoami</a>).
 
   %article
     %h4 Schedule
-    %p For more information about Canberra Ruby meetups, visit <a href="http://canberraruby.com/">the Canberra Ruby Crew</a>.
+    %p For more information about Delhi Ruby meetups, visit <a href="http://delhiruby.org/">Delhi Ruby User Group</a>.
