--- a/pages/meetups/koc.html.haml
+++ b/pages/meetups/koc.html.haml
@@ -1,27 +1,6 @@
 %section
-  %h3 Sydney Ruby
-
-  %article
-    %h4 Next Meetup
-    :markdown
-      #### Tuesday May 8 from 6:30 (for 7pm) @ [Trinity Bar](http://maps.google.com.au/maps/place?cid=12629933912907935072)
-
-      #### Presentations (15min)
-
-      * Why I love CoffeeScript - Jo Cranford [@jocranford](http://twitter.com/jocranford)
-      * RubyMotion - Steve Ringo [@stevenringo](http://twitter.com/stevenringo) & David Parry [@suranyami](http://twitter.com/suranyami)
-      * Rails Conf Retrospective - Mikel Lindsaar [@lindsaar](http://twitter.com/lindsaar)
-
-      #### Lightning Talks (5min)
-
-      * Customising your ssh session - you [@filterfish](http://twitter.com/filterfish)
-      * Coding under PCI's death grip - Matthew Savage [@amasses](http://twitter.com/amasses)
-      * Erlang - Dive right in - Vorn [@vornstar](http://twitter.com/vornstar)
+  %h3 Kochi (Kerela) Ruby
 
   %article
     %h4 Organisers
-    %p Steven Ringo (<a href="http://twitter.com/stevenringo">@stevenringo</a>) and Keith Pitty (<a href="http://twitter.com/keithpitty">@keithpitty</a>).
-
-  %article
-    %h4 Schedule
-    %p Sydney Ruby meetings happen on the second Tuesday of every month, with the occasional exception.
+    %p Please drop an email to rubyin.org@gmail.com if interested in organizing.
