--- a/pages/meetups/chn.html.haml
+++ b/pages/meetups/chn.html.haml
@@ -1,5 +1,5 @@
 %section
-  %h3 Perth
+  %h3 Chennai
 
   %article
     %h4 Next Meeting
@@ -10,15 +10,10 @@
 
   %article
     %h4 Organisers
-    %p There are currently no active organizers for the Perth group - If you're interested in organising it, please contact Darcy using the information below.
-    %h4 Previous Organizers
-    %ul
-      %li Darcy Laycock (<a href="http://twitter.com/sutto">@sutto</a>).
-      %li The Frontier Group / Matt Lambie (<a href="http://twitter.com/mlambie">@mlambie</a>).
-
+    %p There are currently no active organizers for the Chennai group - If you're interested in organising it, please drop an email to rubyindorg@gmail.com
 
   %article
     %h4 Schedule
-    %p For more information about Perth Ruby meetups, visit <a href="http://www.perthrubyonrails.com.au/">Perth Ruby on Rails</a>.
+    %p For more information about Chennai Ruby meetups, visit <a href="http://www.chennairuby.org/">Chennai Ruby User Group</a>.
 
 
