--- a/pages/meetups/pun.html.haml
+++ b/pages/meetups/pun.html.haml
@@ -1,19 +1,6 @@
 %section
-  %h3 Brisbane
-
-  %article
-    %h4 Brisbane Ruby And Rails Meetup
-    %p 4th Monday of each Month
-    %p Presentations:
-    %ul
-      %li Refer to Meetup site for details
-      %li <a href="http://www.meetup.com/brisbane-ruby-rails/">
+  %h3 Pune Ruby
 
   %article
     %h4 Organisers
-    %p Nigel Rausch (<a href="http://twitter.com/nr99">@nr99</a>), Nathan Hoad and Paul O'Keefe.
-
-  %article
-    %h4 Schedule
-    %p For more details about Brisbane Ruby meetups, visit <a href="http://www.meetup.com/brisbane-ruby-rails/">The Brisbane Ruby and Rails Brigade</a>.
-
+    %p If interested in organizing please drop an email to rubyin.org@gmail.com
