updated twitter id of Sidu Ponnappa

--- a/pages/meetups/bng.html.haml
+++ b/pages/meetups/bng.html.haml
@@ -10,7 +10,7 @@
 
   %article
     %h4 Organisers
-    %p Sidu Ponappa (<a href="http://twitter.com/siduponappa">@siduponappa</a>) and Hemant (<a href="http://twitter.com/gnufied">@gnufied</a>).
+    %p Sidu Ponappa (<a href="http://twitter.com/ponnappa">@ponnappa</a>) and Hemant (<a href="http://twitter.com/gnufied">@gnufied</a>).
 
   %article
     %h4 Schedule
