--- a/layout.html.haml
+++ b/layout.html.haml
@@ -31,4 +31,5 @@
       = yield
 
     %footer{role: 'contentinfo'}
-      %small &copy; 2012 Ruby India
+      %small &copy; 2012 Ruby India. Most of the webdesign is pinched from Ruby Australia.
+      %small Built using Jekyll, HTML and CSS. Hosted on Github.
