updated github wiki details of website

--- a/layout.html.haml
+++ b/layout.html.haml
@@ -21,8 +21,8 @@
             %a{href: '/committee-members.html'} Committee Members
             %a{href: '/#meetups'} Meetups
             %a{href: '/#railscamp'} Railscamp
-            %a{href: 'https://github.com/rubyindia/wiki'} Wiki
-            %a{href: 'https://github.com/rubyindia/wiki/Mentoring'} Mentoring
+            %a{href: 'https://github.com/rubyindia/rubyin.org/wiki'} Wiki
+            %a{href: 'https://github.com/rubyindia/rubyin.org/wiki/Mentoring'} Mentoring
 
       %p
         Twitter: <a href="http://twitter.com/rubyinorg">@rubyinorg</a>
