added/updated linkedin group link

--- a/pages/committee-members.html.haml
+++ b/pages/committee-members.html.haml
@@ -12,7 +12,7 @@
       %p There might be some travelling required.
     %div.contact
       %a{href: 'http://twitter.com/rubyinorg'} @rubyinorg
-      %a{href: 'http://in.linkedin.com/in/rubyindia'} LinkedIn
+      %a{href: 'http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&trk=hb_side_g'} LinkedIn
       %a{href: 'https://github.com/rubyindia'} Github
   
   %article
@@ -25,7 +25,7 @@
       %p There might be some travelling required.
     %div.contact
       %a{href: 'http://twitter.com/rubyinorg'} @rubyinorg
-      %a{href: 'http://in.linkedin.com/in/rubyindia'} Linkedin
+      %a{href: 'http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&trk=hb_side_g'} Linkedin
   
   %article
     %img{src: '/images/committee-members/avatar.jpg'}
@@ -37,7 +37,7 @@
       %p There might be some travelling required.
     %div.contact
       %a{href: 'http://twitter.com/rubyinorg'} @rubyinorg
-      %a{href: 'http://in.linkedin.com/in/rubyindia'} LinkedIn
+      %a{href: 'http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&trk=hb_side_g'} LinkedIn
       %a{href: 'https://github.com/rubyindia'} Github
       %a{href: 'http://zerply.com/rubyindia'} Zerply
   
@@ -50,5 +50,5 @@
       %p The role of treasurer is to take care of all the cash flow of organization. Main responsibilities will to manage finance, manage expenses and income of the organization.
     %div.contact
       %a{href: 'http://twitter.com/rubyinorg'} @rubyinorg
-      %a{href: 'http://au.linkedin.com/in/rubyindia'} LinkedIn
+      %a{href: 'http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&trk=hb_side_g'} LinkedIn
       %a{href: 'https://github.com/rubyindia'} Github
