added url to google groups

--- a/layout.html.haml
+++ b/layout.html.haml
@@ -27,6 +27,7 @@
       %p
         Twitter: <a href="http://twitter.com/rubyinorg">@rubyinorg</a>
         %br
+        Group: <a href="https://groups.google.com/forum/?fromgroups#!forum/rubyinorg">Google Group</a> 
         %br
         Linkedin: <a href="http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&trk=hb_side_g">Ruby India</a>
 
